--- a/app/src/main/res/layout/fragment_temperature.xml
+++ b/app/src/main/res/layout/fragment_temperature.xml
@@ -8,8 +8,10 @@
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/mainLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@drawable/sunset_sky"
         tools:context=".main.MainActivity">
 
         <com.google.android.material.appbar.AppBarLayout
@@ -141,8 +143,7 @@
             android:layout_marginTop="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textViewDescription"
-            app:srcCompat="@drawable/sunny" />
+            app:layout_constraintTop_toBottomOf="@+id/textViewDescription" />
 
 
         <com.google.android.material.button.MaterialButton
